<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@mipmap/top_bg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/aap_title"
            android:textColor="@color/title_txt_color" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/searchphone"
        android:textColor="@color/title_txt_color" />

    <EditText
        android:id="@+id/input_phone"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
        android:inputType="phone"
        android:hint="@string/hint_text"
        android:textColor="@color/hint_color" />

    <Button
        android:id="@+id/btn_seatch"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="10dp"
        android:background="@color/button_background_color"
        android:text="@string/search_btn"
        android:textColor="@android:color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="30dp"
        android:text="@string/result"
        android:textColor="@color/search_title_color" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@android:color/white"
        android:orientation="vertical">
        <TextView
            android:id="@+id/result_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:paddingLeft="40dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textColor="@android:color/black"
            android:text="@string/result_phone"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/main_background"/>
        <TextView
            android:id="@+id/result_province"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:paddingLeft="40dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textColor="@android:color/black"
            android:text="@string/result_province"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/main_background"/>
        <TextView
            android:id="@+id/result_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:paddingLeft="40dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textColor="@android:color/black"
            android:text="@string/result_type"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/main_background"/>
        <TextView
            android:id="@+id/result_carrier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:paddingLeft="40dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textColor="@android:color/black"
            android:text="@string/result_carrier"/>

    </LinearLayout>

</LinearLayout>